Added configuration for Maven Central deployment