@@ -6,17 +6,40 @@
 
     <groupId>de.teragam</groupId>
     <artifactId>jfxshader</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0</version>
+
+    <name>JFXShader</name>
+    <description>Allows custom effect shaders in JavaFX using OpenGL or DirectX.</description>
+    <url>https://github.com/Teragam/JFXShader</url>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>19</javafx.version>
-        <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
-        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
-        <codehaus.exec.plugin.version>3.1.0</codehaus.exec.plugin.version>
     </properties>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Nico Paradies</name>
+            <email>paradiesnico@gmail.com</email>
+            <organization>de.teragam</organization>
+            <organizationUrl>https://github.com/Teragam/JFXShader</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/Teragam/JFXShader.git</connection>
+        <developerConnection>scm:git:ssh://github.com:Teragam/JFXShader.git</developerConnection>
+        <url>https://github.com/Teragam/JFXShader</url>
+    </scm>
 
     <distributionManagement>
         <repository>
@@ -24,6 +47,10 @@
             <name>GitHub Packages</name>
             <url>https://maven.pkg.github.com/Teragam/JFXShader</url>
         </repository>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
 
     <build>
@@ -31,7 +58,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.plugin.version}</version>
+                <version>3.11.0</version>
                 <configuration>
                     <compilerArgs>
                         <arg>-h</arg>
@@ -88,16 +115,112 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.13</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>${maven.source.plugin.version}</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <phase>verify</phase>
                         <id>attach-sources</id>
                         <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.5.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
                             <goal>jar</goal>
                         </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <additionalJOptions>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.effect=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.geom=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.geom.transform=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.scene=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.scenario.effect.impl.state=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.scenario.effect=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.prism=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.prism.impl=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.scenario.effect.impl.prism=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.prism.ps=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.glass.ui=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.glass.utils=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.scene.shape=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.sg.prism=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.util=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.prism.impl.ps=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.scenario.effect.impl=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.prism.es2=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.scenario.effect.impl.prism.ps=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.prism.d3d=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.scene.paint=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.tk=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.graphics/com.sun.javafx.beans.event=de.teragam.jfxshader</additionalJOption>
+                        <additionalJOption>--add-exports</additionalJOption>
+                        <additionalJOption>javafx.base/com.sun.javafx=de.teragam.jfxshader</additionalJOption>
+                    </additionalJOptions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -107,7 +230,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>${codehaus.exec.plugin.version}</version>
+                    <version>3.1.0</version>
                     <executions>
                         <execution>
                             <id>exec</id>
